# swagger.yaml
@@ -20,7 +20,6 @@ paths:
         - application/json
         - application/xml
       produces:
-        - application/xml
         - application/json
       parameters:
         - in: body
@@ -40,6 +39,25 @@ paths:
           description: Not found
         '405':
           description: Validation exception
+  '/uploadFile':
+    post:
+      tags:
+        - certificate
+      consumes:
+        - form-data
+      produces:
+        - application/json
+      parameters: 
+        - in: body
+          name: body
+          required: true
+          schema:
+            $ref: '#/definitions/FileStruct'
+      responses:
+        '200':
+          description: successful operation
+          schema:
+            $ref: '#/definitions/Certificate'
   '/certificate/{certId}':
     get:
       tags:
@@ -268,11 +286,23 @@ definitions:
       isDeleted:
         type: boolean
         description: 当前证书是否是已删除状态
+      hasUpload:
+        type: boolean
+        description: 是否已经上传pdf证书文件
+  FileStruct:
+    type: object
+    properties:
+      certId:
+        type: string
+      certFile:
+        type: object
   Status:
     type: object
     properties:
       certId:
         type: string
+      isDelete:
+        type: boolean
       isOpen:
         type: boolean
       isChangedOnChain:
